--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
   z-index: 1; /* Stay on top */
   top: 0; /* Stay at the top */
   left: 0;
-  /*background-color: #111; /* Black */
+  color: black;
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 20px;
 }
@@ -25,8 +25,17 @@ body {
 /*  color: #818181;
   display: block;
 }
+  
+.sidenav a:link {
+  color: inherit;
+  text-decoration: none;
+}
 
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
   text-decoration: underline;
+}
+  
+.sidenav a:visited {
+  color: inherit;
 }
