--- a/styles.css
+++ b/styles.css
@@ -21,8 +21,7 @@ body {
 .sidenav a {
   padding: 6px 8px 6px 16px;
   text-decoration: none;
-/*  font-size: 25px;
-/*  color: #818181;
+  color: black;
   display: block;
 }
   
@@ -31,7 +30,6 @@ body {
   text-decoration: none;
 }
 
-/* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
   text-decoration: underline;
 }
