--- a/styles.css
+++ b/styles.css
@@ -26,16 +26,16 @@ body {
 }
   
 .sidenav a:link {
-  color: unherit;
+  color: inherit;
   text-decoration: none;
 }
   
 .sidenav a:visited {
-  color: unherit;
+  color: inherit;
   text-decoration: none;
 }
 
 .sidenav a:hover {
-  color: unherit;
+  color: inherit;
   text-decoration: underline;
 }
