--- a/style.css
+++ b/style.css
@@ -6,31 +6,38 @@ body {
 }
 
 .sidenav {
+  border-style: solid;
+  border-color: red;
   height: 100%; /* Full-height: remove this if you want "auto" height */
-  width: 160px; /* Set the width of the sidebar */
+  width: 240; /* Set the width of the sidebar */
   position: fixed; /* Fixed Sidebar (stay in place on scroll) */
   z-index: 1; /* Stay on top */
   top: 0; /* Stay at the top */
   left: 0;
   color: black;
   overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 20px;
+  margin-top: 20px;
+  padding-left: 20px;
 }
 
 /* The navigation menu links */
+.sidenav h1,h2 {
+  font-weight: normal;
+}
+
+.sidenav ,h3,h4,h5,h6 {
+  font-weight: normal;
+  padding-left : 12px;
+  font-size: 12pt;
+}
+
 .sidenav a {
-  padding: 6px 8px 6px 16px;
   text-decoration: none;
   color: black;
   display: block;
 }
   
-.sidenav a:link {
-  color: inherit;
-  text-decoration: none;
-}
-  
-.sidenav a:visited {
+.sidenav a:link, a:visited {
   color: inherit;
   text-decoration: none;
 }
@@ -38,4 +45,13 @@ body {
 .sidenav a:hover {
   color: inherit;
   text-decoration: underline;
+}
+
+.rectangle {
+  background-color: #f4f4f4;
+  border-style: solid;
+  border-color: blue;
+  height: auto;
+  margin: 20px 60px 0px 240px;
+  padding: 40px 40px 80px 40px;
 }
